--- a/scss/colors_dark.scss
+++ b/scss/colors_dark.scss
@@ -41,6 +41,9 @@
     --textedit-comment: #5CB59E;
     --textedit-function: #eeeeee;
     --textedit-keyword: #F0D165;
+
+    --numinput-bg: #444444;
+    --numinput-bar: #5a5a5a;
 }
 
 
